# NewNotes-and-documents

./: README.md
diary/: 心得体会.md  项目记录.md
linux/: Readme.md
linux/Drivers/: myfirst.dts
linux/Drivers/Linux_Drivers/157test/BT_ttl/: CMakeCache.txt  CMakeLists.txt  Makefile  blue  blue.c  blue_rw  blue_rw.c  cmake_install.cmake
linux/Drivers/Linux_Drivers/157test/lowermachine/: CMakeLists.txt  Makefile  data_WIN.cc  data_WIN.h  main.cc  main_data.cc  main_data.h
linux/Drivers/Linux_Drivers/157test/lowermachine/BP/: BPNet.cc  BPNet.h  BP_DATA.cc  BP_DATA.h  class_Dense.cc  class_Dense.h
linux/Drivers/Linux_Drivers/157test/lowermachine/IMU/: IMU_data.cc  IMU_data.h  data_IMU_main.cc  data_IMU_main.h
linux/Drivers/Linux_Drivers/157test/lowermachine/IPC/: Sem.cc  Sem.h  shm.cc  shm.h
linux/Drivers/Linux_Drivers/157test/lowermachine/TCP/: CAN_class.cc  CAN_class.h  main_can.cc  main_can.h  main_tcp.cc  main_tcp.h  tcp_TCPClass.cc  tcp_TCPClass.h
linux/Drivers/Linux_Drivers/157test/lowermachine/ad7606/: ADC_OL.cc  ADC_OL.h  data_ADC_main.cc  data_ADC_main.h  filt_ADC.cc  filt_ADC.h
linux/Drivers/Linux_Drivers/157test/lowermachine/can_client/: can  can_client.cpp
linux/Drivers/Linux_Drivers/157test/lowermachine/dsp/: dsp_ACT.cc  dsp_ACT.h  dsp_RCGClass.h  dsp_RCG_main.cc  dsp_RCG_main.h  dsp_RCGclass.cc  main_dsp.cc  main_dsp.h
linux/Drivers/Linux_Drivers/157test/lowermachine/foot/: data_FOOT_main.cc  data_FOOT_main.h
linux/Drivers/Linux_Drivers/157test/lowermachine/global/: config.h  global.cc  global.h
linux/Drivers/Linux_Drivers/157test/lowermachine/myImuTest/: IMU_data.cpp  IMU_data.h  config.h  data_IMU_main.cpp  data_IMU_main.h  file_IMU.csv  file_IMU_L.csv  file_IMU_R.csv  main.cpp
linux/dts/: .aspeed-ast2500-evb.dtb.cmd  .aspeed-ast2500-evb.dtb.d.pre.tmp  .aspeed-ast2500-evb.dtb.dts.tmp  .aspeed-ast2600-evb.dtb.cmd  .aspeed-ast2600-evb.dtb.d.pre.tmp  (+209 more)
notes/: 刷题心得.md  复习计划.md  项目经历.md
(+470 files in other folders)
